# Plate-Recognition-GUI

./: PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  authorized_plates.db  gui_app.py  gui_handlers.py  gui_styles.py  main.py  plate_recognition.py  plate_utils.py  requirements.txt  udp_server.py
barrier_gate_client/: BUILD.gn  demo_entry_cmsis.c  oled_fonts.h  oled_ssd1306.c  oled_ssd1306.h  robot_sg90.c  robot_sg90.h  udp_client_test.c  wifi_connecter.c  wifi_connecter.h
